[package]
name = "zombieland"
version = "0.3.1"
authors = ["<unixway.drive@gmail.com>"]

[dependencies]
# setsid() is in git since 2016-10-27, yet no release has been made since then
nix = { git = "https://github.com/nix-rust/nix" }
# waitid() is not yet released
libc = { git = "https://github.com/rust-lang/libc" }
syscall = "0.2.1"
